<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:theme="@style/toolbar_theme"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="#ffffff"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/home_radio_family"
            android:text="@string/home_text"
            android:textSize="10sp"
            android:textColor="@drawable/main_text_color"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/home_radio_mall"
            android:text="@string/gank_text"
            android:textSize="10sp"
            android:textColor="@drawable/main_text_color"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/home_radio_scene"
            android:text="@string/article_text"
            android:textSize="10sp"
            android:textColor="@drawable/main_text_color"
            />

    </RadioGroup>

</androidx.coordinatorlayout.widget.CoordinatorLayout>