<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/toolbar_theme"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="false"
        app:cardBackgroundColor="@color/item_card_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_set_dark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/iv_right_img"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/title_color"
                android:textSize="12sp"
                android:text="@string/dark_mode"/>

            <TextView
                android:id="@+id/tv_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_set_dark"
                app:layout_constraintBottom_toBottomOf="@id/tv_set_dark"
                app:layout_constraintRight_toLeftOf="@id/iv_right_img"
                android:textColor="@color/sub_title_color"
                android:textSize="10sp"
                android:text="@string/dark_follow_system"
                />

            <ImageView
                android:id="@+id/iv_right_img"
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_set_dark"
                app:layout_constraintBottom_toBottomOf="@id/tv_set_dark"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_back_wh"
                android:tint="@color/title_color"
                android:scaleType="centerCrop"
                android:rotation="180"
                />

            <View
                android:id="@+id/view_dark_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_set_dark"
                app:layout_constraintLeft_toLeftOf="@id/tv_set_dark"
                app:layout_constraintRight_toRightOf="@id/iv_right_img"
                android:layout_marginTop="10dp"
                android:background="@color/gray_color"
                />

            <TextView
                android:id="@+id/tv_clear_cache"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view_dark_line"
                app:layout_constraintLeft_toLeftOf="@id/tv_set_dark"
                app:layout_constraintRight_toRightOf="@id/iv_right_img"
                android:layout_marginTop="10dp"
                android:textColor="@color/title_color"
                android:textSize="12sp"
                android:text="@string/cache_clear"
                />

            <TextView
                android:id="@+id/tv_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_clear_cache"
                app:layout_constraintBottom_toBottomOf="@id/tv_clear_cache"
                app:layout_constraintRight_toLeftOf="@id/iv_right_cache"
                android:textColor="@color/sub_title_color"
                android:textSize="10sp"
                 />

            <ImageView
                android:id="@+id/iv_right_cache"
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_clear_cache"
                app:layout_constraintBottom_toBottomOf="@id/tv_clear_cache"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_back_wh"
                android:tint="@color/title_color"
                android:scaleType="centerCrop"
                android:rotation="180"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>